# gsc-mcp

./: .env.example  .gitignore  pyproject.toml
src/: config.py  credentials.py  google_auth.py  proxy_router.py  server.py  ttl_cache.py
src/tools/: search_analytics.py  sitemaps.py  url_inspection.py
