[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsc-mcp"
version = "0.1.0"
description = "Google Search Console MCP server for SEO agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "PyJWT[crypto]>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gsc-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
